@@ -1,4 +1,4 @@
-.TH GPLINK 1 "27 octobre 2007" "gputils-0.13.6" "Manuel de l'utilisateur Linux"
+.TH GPLINK 1 "27 octobre 2007" "gputils-0.13.7" "Manuel de l'utilisateur Linux"
 .SH NOM
 gplink \- Éditeur de liens GNU pour PIC
 .SH SYNOPSIS
