@@ -1,4 +1,4 @@
-.TH GPVO 1 "27 octobre 2007" "gputils-0.13.6" "Manuel de l'utilisateur Linux"
+.TH GPVO 1 "27 octobre 2007" "gputils-0.13.7" "Manuel de l'utilisateur Linux"
 .SH NOM
 gpvo \- Visualiseur GNU de fichiers objets pour PIC
 .SH SYNOPSIS
